Leonliang/che 31 add betting page (#19)
* add bets page

* create banner

* changed banner background pattern

* refactoring

* add banner to community pages

* add copy to clipboard component

* Refactoring

* Add banner to all pages

* create select

* refactor banner

* add tabs

* added Sheet

* minor fixes

* minor ui adjustments

* changed join community and create community modals to sheets

* minor improvements

* fix hydration errors

* default values for submit bet form

* create form component

* fix Form types

* use new form component in create community and join community components

* Add logic to matches page

* select round based on current date

* select tab based on closest date in matches overview component

* bug fixes

* refactoring

* refactoring

* refactoring

* add classname prop to all icons
