# server/docs/swagger.json
@@ -85,6 +85,39 @@
                 }
             }
         },
+        "/v1/communities/{community_id}": {
+            "get": {
+                "security": [
+                    {
+                        "OAuth2Implicit": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Communities"
+                ],
+                "summary": "Retrieve a community with the given id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Community ID",
+                        "name": "community_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.communityResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/communities/{community_id}/join": {
             "post": {
                 "security": [
