# server/handler/routes.go
@@ -11,6 +11,7 @@ func (h *Handler) Register(v1 *echo.Group) {
 	communities := v1.Group("/communities")
 	communities.POST("", h.CreateCommunity)
 	communities.GET("", h.GetUserCommunities)
+	communities.GET("/:community_id", h.GetCommunity)
 	communities.POST("/:community_id/join", h.JoinCommunity)
 	communities.GET("/:community_id/members", h.GetCommunityMembers)
 }
